--- a/Exceed-j-p.html
+++ b/Exceed-j-p.html
@@ -13,67 +13,29 @@
         background: #474693;
         font-size: 30px;
     }
-.navbar {
-  overflow: hidden;
-  background-color: #474693;
-}
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: #474693;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: #474693;
-  z-index: 1;
-}
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-    .content
+    .navbar
     {
-        padding:50px;
-        background:#FFFED1;
+      overflow: hidden;
+      background-color: #474693;
+      height:55px;
+    }
+    .navbar a
+    {      
+      float: left;
+      font-size: 20px;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+    .navbar a
+    {
+      background-color: #474693;
+    }
+   .content
+    {
+      padding:50px;
+      background:#FFFED1;
     }
     .content h1
     {
@@ -105,7 +67,7 @@
             <a href="#home">Home</a>
             <a href="#news">Internships</a>
             <a href="https://priyajahnavi.github.io/webpagecertifications/Exceed(cert)-j-p.html">Certifications</a>
-            </div> 
+            <a style="float:right" href="#About">About</a>
           </div>
         <div class="content">
             <center><h1>Welcome to<br>Intern-Search</h1></center>
@@ -128,8 +90,8 @@
         </div>
         <div class="footer">
             <p>
-                <h3>Copyrights @Copy Priyanandini Pasupuleti and Jahnavi Annambotla<br>
-                <a href="mailto:priyanandinipasupuleti@gmail.com">priyanandinijahnavi@gmail.com</a></h3>
+              <h3>Copyrights : Priyanandini Pasupuleti and Jahnavi Annambotla<br>For any quieres mail to:
+              <a href="mailto:priyanandinijahnavi@gmail.com">priyanandinijahnavi@gmail.com</a></h3>
             </p>
         </div>
     </body>
