--- a/Login.html
+++ b/Login.html
@@ -103,7 +103,7 @@
  
         <div class="container" style="background-color:#f1f1f1">
             <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="#">password?</a></span>
+            <span class="psw">Forgot <a href="#">pasword?</a></span>
         </div>
     </form>
  
