--- a/Exceed-j-p.html
+++ b/Exceed-j-p.html
@@ -66,9 +66,9 @@
         <div class="navbar">
             <a href="#home">Home</a>
             <a href="#news">Internships</a>
-            <a href="https://priyajahnavi.github.io/Webpage/Exceed(virtual%20internships)-j-p">Virtual Internships</a>
-            <a href="https://priyajahnavi.github.io/Webpage/Exceed(cert)-j-p">Certifications</a>
-            <a style="float:right" href="#About">About</a>
+            <a href="#news">Virtual Internships</a>
+            <a href="https://priyajahnavi.github.io/webpagecertifications/Exceed(cert)-j-p.html">Certifications</a>
+            <a style="float:right" href="https://priyajahnavi.github.io/Webpage/contactus.html">About</a>
           </div>
         <div class="content">
             <center><h1>Welcome to<br>Intern-Search</h1></center>
