--- a/Exceed-j-p.html
+++ b/Exceed-j-p.html
@@ -66,7 +66,7 @@
         <div class="navbar">
             <a href="#home">Home</a>
             <a href="#news">Internships</a>
-            <a href="#news">Virtual Internships</a>
+            <a href="https://priyajahnavi.github.io/Webpage/Exceed(virtual%20internships)-j-p.html">Virtual Internships</a>
             <a href="https://priyajahnavi.github.io/webpagecertifications/Exceed(cert)-j-p.html">Certifications</a>
             <a style="float:right" href="https://priyajahnavi.github.io/Webpage/contactus.html">About</a>
           </div>
